TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Mapping-Defect/out/includes/PipelineACC.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef PipelineACC_HXX
#define PipelineACC_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif